# QtWaitingSpinner

./: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  waitingspinnerwidget.cpp  waitingspinnerwidget.h
